[gd_scene load_steps=16 format=3 uid="uid://dr0a3c831i83r"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_1dsef"]
[ext_resource type="Texture2D" uid="uid://b38e4srfq6oe5" path="res://Assets/Enemies/Aranha/nv0/aranha_baixo.png" id="1_1lok4"]
[ext_resource type="Texture2D" uid="uid://n1qh8yt1jrws" path="res://Assets/Enemies/Aranha/nv0/aranha_esquerda.png" id="2_kiibn"]
[ext_resource type="Texture2D" uid="uid://27p5nxeqxkn5" path="res://Assets/Enemies/Aranha/nv0/aranha_esquerdabaixo.png" id="3_d8abk"]
[ext_resource type="Texture2D" uid="uid://dd0estrc5gr5k" path="res://Assets/Enemies/Aranha/nv0/aranha_esquerdacima.png" id="4_8fy6e"]
[ext_resource type="Texture2D" uid="uid://cv3xd2d2cy5jt" path="res://Assets/Enemies/Aranha/nv0/aranha_direita.png" id="5_tau8w"]
[ext_resource type="Texture2D" uid="uid://c3mcu264okyos" path="res://Assets/Enemies/Aranha/nv0/aranha_direitabaixo.png" id="6_jsid5"]
[ext_resource type="Texture2D" uid="uid://cknvnmsk6wbqc" path="res://Assets/Enemies/Aranha/nv0/aranha_direitacima.png" id="7_8bger"]
[ext_resource type="Texture2D" uid="uid://42pxnq178gci" path="res://Assets/Enemies/Aranha/nv0/aranha_cima.png" id="8_q2uqo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wo3ju"]
atlas = ExtResource("1_1lok4")
region = Rect2(0, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_3327j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo3ju")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_1lok4")
}],
"loop": true,
"name": &"walk down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kiibn")
}],
"loop": true,
"name": &"walk left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_d8abk")
}],
"loop": true,
"name": &"walk left down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8fy6e")
}],
"loop": true,
"name": &"walk left up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_tau8w")
}],
"loop": true,
"name": &"walk right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_jsid5")
}],
"loop": true,
"name": &"walk right down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_8bger")
}],
"loop": true,
"name": &"walk right up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_q2uqo")
}],
"loop": true,
"name": &"walk up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7edm"]
size = Vector2(8, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fnaaj"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgdav"]
size = Vector2(12, 4.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_n2bjq"]
radius = 52.0

[node name="Enemy" type="CharacterBody2D"]
light_mask = 4
visibility_layer = 15
z_index = 3
collision_layer = 4
collision_mask = 3
script = ExtResource("1_1dsef")

[node name="EnemyAnimation" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_3327j")
animation = &"walk left down"
autoplay = "idle"

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_j7edm")

[node name="EnemyHitbox" type="Area2D" parent="."]
light_mask = 4
visibility_layer = 3
collision_layer = 4
collision_mask = 7

[node name="hitboxArea" type="CollisionShape2D" parent="EnemyHitbox"]
light_mask = 4
visibility_layer = 7
shape = SubResource("RectangleShape2D_fnaaj")

[node name="Attackbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 7

[node name="attackArea" type="CollisionShape2D" parent="Attackbox"]
light_mask = 4
visibility_layer = 7
texture_filter = 1
position = Vector2(0, 8.75)
shape = SubResource("RectangleShape2D_kgdav")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_n2bjq")

[connection signal="area_entered" from="EnemyHitbox" to="." method="_on_enemy_hitbox_area_entered"]
[connection signal="body_entered" from="Attackbox" to="." method="_on_attackbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
